--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,6 +34,9 @@
     --ring: 0 0% 3.9%; /* black */
 
     --radius: 0.5rem;
+
+    --font-sans: "Helvetica", sans-serif;
+    --font-headline: "Arial Black", sans-serif;
   }
 }
 
